# RTR105

./: .gitignore  README.md  ar_argumentu_ar_return.c  bez_argumenta_ar_return.c  burtu_kartotajs  burtu_kartotajs.c  dec2bin.c  git-upload  history_20230919_Class_04.txt  reizinatajs.c  skaitliskas_metodes_gala_versija.c
Class_07/: history_20231003_Class_07.txt
Class_08_09/: history_20231010_Class_08_09.txt  variables.c
Class_10/: if.c  if.out  while.c
Class_11/: arrays.c  arrays.out  foo.c  main.c  strings.c  strings.out  testprogram  vārdu_statistika.c  vārdu_statistika.out
Class_14/: fclose.c  fclose.out  fprintf.c  fscan.c  fscanf.out  fwriteistais.out
Class_15_16/: funkcija.gn  skaitliskas_metodes5.c  skaitliskās_metodes.c  skaitliskās_metodes.out  skaitliskās_metodes2.c  skaitliskās_metodes2.out  skaitliskās_metodes3.c  skaitliskās_metodes3.out  skaitliskās_metodes4.c  skaitliskās_metodes4.out
Class_19/: Derivative.c  derivative.gp
Faktoriāls/: Faktorials_for.c  Faktorials_while.c  Faktoriāls  Faktoriāls_for.c  Faktoriāls_while.c
LD_Bubble_Sort/: BubbleSort.c  Bubble_Sort.c  BurtuBiezums.gp  readme.md
LD_Derivative/: derivative.c  derivative.gp  readme.md
LD_Roots/: Roots.c  grafiks.gp  readme.md
LD_arcsin/: Readme.md  arcsin1.c  arcsin4.c  arcsin_gala_versija.c
LD_integresana/: integresana.c  integresana.gp  readme.md
LD_integrēšana/: integrēšana.c
arcsin/: Readme.md  arcsin1.c  arcsin2.c  arcsin3.c  arcsin4.c  arcsin_gala_versija.c  arcsin_pabeigts.c  grafiks.gp
majasdarbs_4_kodi/: ar_argumentu_bez_return.c  bez_argumenta_bez_return.c
(+8 files in other folders)
